# ClaudeCode_MultiAgentTDDEngine

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DetailedDevelopmentPlan.md  DevelopmentPlan.md  ENVIRONMENT_SETUP.md  LICENSE  PHASE1_USAGE.md  README.md  SoftwareArchitecture.md  TechnicalSpecification.md  config.json  config.json.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  slack-integration-plan.md
docs/: slack-setup-guide.md  slack-troubleshooting.md  slack-usage-examples.md
scripts/: install_dependencies.sh  setup_dev_tools.py  start_all_services.py  start_slack_bot.py  start_webhook_server.py  test_core_logic.py  test_e2e.py  verify_dependencies.py
src/: README.md  agent_engine.py  agent_engine_corrupted.py  webhook_server.py
src/presentation/api/: slack_bot.py
src/shared/utils/: issue_parser.py
tests/: conftest.py
tests/fixtures/: slack_fixtures.py
tests/integration/: test_slack_bot_integration.py  test_slack_integration.py  test_slack_security.py  test_webhook_integration.py
tests/unit/: test_agent_engine.py
tests/unit/infrastructure/: test_slack_client.py  test_slack_config.py
tests/unit/shared/: test_issue_parser.py
